--- a/package.json
+++ b/package.json
@@ -31,6 +31,14 @@
         "debug": "egg-bin debug",
         "test": "npm run lint -- --fix && npm run test-local",
         "test-local": "egg-bin test",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "start-container": "egg-scripts start --title=gemini-token-manager",
+        "pm2": "pm2 start ecosystem.config.js",
+        "pm2:docker": "pm2-runtime start ecosystem.config.js --env docker",
+        "pm2:stop": "pm2 stop ecosystem.config.js",
+        "pm2:restart": "pm2 restart ecosystem.config.js",
+        "pm2:reload": "pm2 reload ecosystem.config.js",
+        "pm2:delete": "pm2 delete ecosystem.config.js",
+        "pm2:logs": "pm2 logs"
     }
 }
