--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "egg-view-nunjucks": "^2.3.0",
         "escape-html": "^1.0.3",
         "helmet": "^8.1.0",
+        "https-proxy-agent": "^5.0.1",
         "node-fetch": "^2.6.7",
         "validator": "^13.15.0",
         "xss": "^1.0.15"
