--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "helmet": "^8.1.0",
         "https-proxy-agent": "^5.0.1",
         "node-fetch": "^2.6.7",
+        "openai": "^4.90.0",
         "validator": "^13.15.0",
         "xss": "^1.0.15"
     },
